<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:background="?attr/selectableItemBackground">

    <RelativeLayout
        android:id="@+id/runRowRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/runNumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title_activity_run_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:id="@+id/ddpLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/runNumTextView"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/durationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/duration" />

            <TextView
                android:id="@+id/distanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/paceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pace" />
        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>