<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/tvBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/date_of_birth"
        android:textAppearance="@android:style/Theme.Material.Settings"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/etDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etDate" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/weight_mass"
        android:textAppearance="@android:style/Theme.Material.Settings"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/etWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etWeight" />

    <TextView
        android:id="@+id/tvVibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/vibrate"
        android:textAppearance="@android:style/Theme.Material.Settings"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLanguage" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/language"
        android:textAppearance="@android:style/Theme.Material.Settings"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSecond" />

    <TextView
        android:id="@+id/tvHR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="EN"
        app:layout_constraintBottom_toBottomOf="@+id/languageSwitch"
        app:layout_constraintEnd_toStartOf="@+id/languageSwitch"
        app:layout_constraintTop_toTopOf="@+id/languageSwitch" />

    <TextView
        android:id="@+id/tvEN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="HR"
        app:layout_constraintBottom_toBottomOf="@+id/languageSwitch"
        app:layout_constraintStart_toEndOf="@+id/languageSwitch"
        app:layout_constraintTop_toTopOf="@+id/languageSwitch" />

    <Switch
        android:id="@+id/languageSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLanguage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvLanguage"
        app:layout_constraintTop_toTopOf="@+id/tvLanguage" />

    <Switch
        android:id="@+id/vibrateSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvVibrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvVibrate"
        app:layout_constraintTop_toTopOf="@+id/tvVibrate" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name_hint"

        android:inputType="textPersonName"
        android:lines="1"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFirst" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/height"
        android:textAppearance="@android:style/Theme.Material.Settings"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/etHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etHeight" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvWeight"
        app:layout_constraintTop_toBottomOf="@+id/etHeight" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvHeight"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvBirth"
        app:layout_constraintTop_toBottomOf="@+id/etWeight" />

    <TextView
        android:id="@+id/tvKG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="kg"
        app:layout_constraintBottom_toBottomOf="@+id/etWeight"
        app:layout_constraintStart_toEndOf="@+id/etWeight"
        app:layout_constraintTop_toTopOf="@+id/etWeight" />

    <TextView
        android:id="@+id/tvCM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="cm"
        app:layout_constraintBottom_toBottomOf="@+id/etHeight"
        app:layout_constraintStart_toEndOf="@+id/etHeight"
        app:layout_constraintTop_toTopOf="@+id/etHeight" />

    <TextView
        android:id="@+id/tvCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:gravity="center"
        android:text="@string/credits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vibrateSwitch" />

    <TextView
        android:id="@+id/tvSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/options"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDate" />

    <TextView
        android:id="@+id/tvFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>